backend/src/api/api.hpp

    
    typedef struct LeHandle LeHandle;
    typedef struct LePixelBuffer
    {
        const uint8_t *data;
        int32_t width;
        int32_t height;
        int64_t row_bytes;
    } LePixelBuffer;
    typedef struct LeDesignId
    {
        uint32_t index;
        uint32_t generation;
    } LeDesignId;
    typedef struct LeAbstractId
    {
        uint32_t index;
        uint32_t generation;
    } LeAbstractId;
    typedef struct LeSnappedMousePosition
    {
        double x_um;
        double y_um;
        int32_t has_position;
    } LeSnappedMousePosition;
    int32_t le_message_count(LeHandle *handle);
    const char *le_message_at(LeHandle *handle, int32_t index);
    const char *le_design_name(LeHandle *handle, int32_t index);
    int le_set_current_design(LeHandle *handle, int32_t index);
    int le_set_current_design_by_id(LeHandle *handle, LeDesignId design_id);
    void le_set_mouse_position(LeHandle *handle, int32_t x, int32_t y);
    LeSnappedMousePosition le_snapped_mouse_position(LeHandle *handle);
    void le_mouse_up(LeHandle *handle, int32_t x, int32_t y);
    typedef enum LeSelectionKind
    {
        LE_SELECTION_KIND_TERMINAL = 0,
        LE_SELECTION_KIND_OBSTRUCTION = 1,
    } LeSelectionKind;
    typedef struct LeProperty
    {
        const char *name;
        int32_t type; 
        const char *string_value;
        int64_t int_value;
        double double_value;
    } LeProperty;
    int32_t le_selected_object_property_count(LeHandle *handle, int32_t selection_index);
    LeProperty le_selected_object_property_at(LeHandle *handle, int32_t selection_index, int32_t property_index);
    LePixelBuffer le_render_pixel_buffer(LeHandle *handle);
    typedef struct LeTerminalId
    {
        uint32_t index;
        uint32_t generation;
    } LeTerminalId;
    LeTerminalId le_create_terminal(LeHandle *handle, LeAbstractId abstract_id, const char *name, int32_t direction);
    LeTerminalId le_terminal_by_name(LeHandle *handle, const char *name);
    const char *le_terminal_name(LeHandle *handle, LeTerminalId id);
    int32_t le_terminal_property_count(LeHandle *handle, LeTerminalId id);
    LeProperty le_terminal_property_at(LeHandle *handle, LeTerminalId id, int32_t index);
    int32_t le_get_terminals(LeHandle *handle, LeAbstractId of_abstract, const char *name_expression, const char *filter_expression);