flutter_plugin/lib/lef_editor_plugin_bindings_generated.dart


  /// @brief The property row at `property_index`
  /// (0..le_selected_object_property_count(selection_index)-1) for the
  /// selected object at `selection_index`. Per UPDATES.md 7.2: simple
  /// fields (name, direction, counts of list fields rather than the
  /// lists themselves) are sent as-is; any coordinate is always
  /// converted from dbu to microns first (via the same single shared/
  /// global Technology::database_units_microns as
  /// le_snapped_mouse_position - omitted if no Technology has been read
  /// yet). Every plain/enum field on the underlying database class
  /// itself (e.g. Terminal's "name"/"direction") comes from cmg's
  /// schema-generated `le::to_properties()` (see schema.py's Field
  /// reflection helpers and generated/property.hpp) - new plain fields
  /// added to schema.py appear here automatically, no api.cpp change
  /// needed. Only what's genuinely derived (not a stored field) is
  /// hand-appended: a schema-tracked list field's own size, named
  /// "<field>_count" (e.g. Obstruction's "shapes" list ->
  /// "shapes_count"), plus a child list that isn't a struct field at
  /// all in INDEXED_POOLS style (Terminal's "port_count", from Root's
  /// own port index - "ports" itself never appears), plus "bbox_um"
  /// (string, "ll_x ll_y ur_x ur_y" space-separated, mirroring how a
  /// LEF RECT statement itself lists four coordinates, since a bbox is
  /// computed from nested geometry, never a stored field). Each
  /// coordinate is formatted with trailing zeros trimmed in whole
  /// groups of three - never a partial group - down to whichever
  /// group first has a non-zero digit (or entirely, dropping the
  /// decimal point, if every digit is zero): 1.0 -> "1", 0.34 ->
  /// "0.340" (the next group, "340", isn't all zero, so it stays),
  /// 0.123456 unchanged (no trimmable trailing zero group at all). If
  /// the
  /// selection came from a click that hit one specific rect/polygon/
  /// path (as opposed to a drag-select, which selects whole objects -
  /// see le_mouse_up), "bbox_um" covers just that piece, not the whole
  /// object's union, and a "layer_name" (string) row is added for it -
  /// useful since a Terminal can have ports on different layers.
  /// Otherwise (drag-select, or no Technology available) "bbox_um"
  /// covers the whole object and there's no "layer_name" row. Current
  /// rows:
  ///
  /// - LE_SELECTION_KIND_TERMINAL: "name" (string), "direction" (string,
  /// e.g. "INPUT"), "port_count" (int), then "bbox_um" (string) and,
  /// if piece-scoped, "layer_name" (string), if the Terminal has any
  /// shapes and a Technology is available.
  /// - LE_SELECTION_KIND_OBSTRUCTION: "shapes_count" (int), then the
  /// same "bbox_um"/"layer_name" rows under the same conditions.
  ///
  /// Returns an all-null/zero row (LeProperty::name == nullptr) if
  /// handle is null or either index is out of range.
  LeProperty le_selected_object_property_at(
    ffi.Pointer<LeHandle> handle,
    int selection_index,
    int property_index,
  ) {
    return _le_selected_object_property_at(
      handle,
      selection_index,
      property_index,
    );
  }

  late final _le_selected_object_property_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(ffi.Pointer<LeHandle>, ffi.Int32, ffi.Int32)
        >
      >('le_selected_object_property_at');
  late final _le_selected_object_property_at =
      _le_selected_object_property_atPtr
          .asFunction<LeProperty Function(ffi.Pointer<LeHandle>, int, int)>();

  /// @brief Run the full pipeline+render chain (generate -> filter ->
  /// filter -> transform -> picture -> rasterize) for the currently
  /// selected Design and viewport, returning the resulting pixel
  /// buffer - including the grid-snap indicator box at the current
  /// mouse position, if one has been set (see le_set_mouse_position).
  /// Each stage is cached internally (see Pipeline/Renderer) - calling
  /// this again with nothing changed since the last call is close to
  /// free; only viewport/selection/mouse-position changes actually
  /// recompute, and a mouse-position-only change is itself cheap (see
  /// Renderer::compose_with_overlays), not proportional to design size.
  /// Returns an all-zero/null LePixelBuffer if handle is null. No
  /// Design selected (le_set_current_design was never called) degrades
  /// gracefully to an empty (but correctly-sized, non-null) buffer
  /// rather than crashing - Root/Pipeline's own lookups already degrade
  /// gracefully for an unset AbstractId (see pipeline.hpp).
  LePixelBuffer le_render_pixel_buffer(ffi.Pointer<LeHandle> handle) {
    return _le_render_pixel_buffer(handle);
  }

  late final _le_render_pixel_bufferPtr =
      _lookup<
        ffi.NativeFunction<LePixelBuffer Function(ffi.Pointer<LeHandle>)>
      >('le_render_pixel_buffer');
  late final _le_render_pixel_buffer = _le_render_pixel_bufferPtr
      .asFunction<LePixelBuffer Function(ffi.Pointer<LeHandle>)>();

  /// @brief Create a Terminal (a.k.a. pin) on the Abstract at
  /// `abstract_id` (UPDATES.md item 15's `create_terminal -name IN0
  /// -direction IN`). Only name/direction are settable here - every
  /// other Terminal field (LEF's optional use/shape/antenna/etc.
  /// fields) defaults to its zero value; extend this function's
  /// parameter list if a real caller needs to set one at creation time
  /// rather than via a later le_set_terminal_* call. `name` must be
  /// unique among Terminals already on `abstract_id` (a TCL script
  /// addresses a Terminal by name - UPDATES.md's Terminal-friendly-id
  /// item - so a collision would be genuinely ambiguous, not just
  /// unusual; enforced by a linear scan over
  /// Root::get_abstract_terminals, not a cmg index=True lookup, since
  /// real LEF libraries legitimately reuse pin names like VDD/IN0
  /// across different Abstracts and index=True's generated index is
  /// flat/global, not per-Abstract). Returns an invalid LeTerminalId
  /// (index == UINT32_MAX) if handle or name is null, abstract_id
  /// doesn't name an Abstract on this handle, or name collides with an
  /// existing Terminal on it (pushes an ERROR message the same way a
  /// filter-expression parse error does - see le_message_count/
  /// le_message_at).
  LeTerminalId le_create_terminal(
    ffi.Pointer<LeHandle> handle,
    LeAbstractId abstract_id,
    ffi.Pointer<ffi.Char> name,
    int direction,
  ) {
    return _le_create_terminal(handle, abstract_id, name, direction);
  }

  late final _le_create_terminalPtr =
      _lookup<
        ffi.NativeFunction<
          LeTerminalId Function(
            ffi.Pointer<LeHandle>,
            LeAbstractId,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('le_create_terminal');
  late final _le_create_terminal = _le_create_terminalPtr
      .asFunction<
        LeTerminalId Function(
          ffi.Pointer<LeHandle>,
          LeAbstractId,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  /// @brief Find the Terminal named `name` (exact match) within the
  /// currently selected Design's Abstract (see le_set_current_design/
  /// le_set_current_design_by_id - same current-view scoping
  /// le_get_terminals already uses). A linear scan over
  /// Root::get_abstract_terminals, not a cmg index=True lookup - see
  /// le_create_terminal's own comment for why. Returns an invalid
  /// LeTerminalId (index == UINT32_MAX) if handle or name is null, no
  /// Design is currently selected, or no Terminal in the current
  /// Abstract has that name.
  LeTerminalId le_terminal_by_name(
    ffi.Pointer<LeHandle> handle,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _le_terminal_by_name(handle, name);
  }

  late final _le_terminal_by_namePtr =
      _lookup<
        ffi.NativeFunction<
          LeTerminalId Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
        >
      >('le_terminal_by_name');
  late final _le_terminal_by_name = _le_terminal_by_namePtr
      .asFunction<
        LeTerminalId Function(ffi.Pointer<LeHandle>, ffi.Pointer<ffi.Char>)
      >();

  /// @brief The Terminal at `id`'s own name - a direct field accessor
  /// (unlike le_terminal_property_at's stringly-typed property table),
  /// for a caller that just wants the name itself. Returned pointer is
  /// owned by the handle's Root - valid until the next call that
  /// mutates this handle's Terminal pool (same convention as
  /// le_design_name) - copy out immediately, don't hold across another
  /// call. Returns nullptr if handle is null or id doesn't name a
  /// Terminal on this handle.
  ffi.Pointer<ffi.Char> le_terminal_name(
    ffi.Pointer<LeHandle> handle,
    LeTerminalId id,
  ) {
    return _le_terminal_name(handle, id);
  }

  late final _le_terminal_namePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>, LeTerminalId)
        >
      >('le_terminal_name');
  late final _le_terminal_name = _le_terminal_namePtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>, LeTerminalId)
      >();

  /// @brief Number of property rows for the Terminal at `id` - same
  /// name/value table shape as le_selected_object_property_at
  /// (LeProperty), but addressed directly by id rather than by current
  /// selection index, for a TCL `get_terminal`-style caller that isn't
  /// working off the current GUI selection. Rows: every plain Terminal
  /// field from cmg's generated to_properties() ("name", "direction",
  /// ...), plus "port_count" (int, from Root's own port index -
  /// "ports" itself isn't a stored field, same as
  /// le_selected_object_property_at's). No "bbox_um"/"layer_name" rows
  /// (those are piece-selection-scoped concepts, meaningless for an
  /// arbitrary id lookup). Returns 0 if handle is null or id doesn't
  /// name a Terminal on this handle.
  int le_terminal_property_count(
    ffi.Pointer<LeHandle> handle,
    LeTerminalId id,
  ) {
    return _le_terminal_property_count(handle, id);
  }

  late final _le_terminal_property_countPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<LeHandle>, LeTerminalId)
        >
      >('le_terminal_property_count');
  late final _le_terminal_property_count = _le_terminal_property_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, LeTerminalId)>();

  /// @brief The property row at `index`
  /// (0..le_terminal_property_count(id)-1) for the Terminal at `id`.
  /// Returns an all-null/zero row (LeProperty::name == nullptr) if
  /// handle is null, id doesn't name a Terminal on this handle, or
  /// index is out of range.
  LeProperty le_terminal_property_at(
    ffi.Pointer<LeHandle> handle,
    LeTerminalId id,
    int index,
  ) {
    return _le_terminal_property_at(handle, id, index);
  }

  late final _le_terminal_property_atPtr =
      _lookup<
        ffi.NativeFunction<
          LeProperty Function(ffi.Pointer<LeHandle>, LeTerminalId, ffi.Int32)
        >
      >('le_terminal_property_at');
  late final _le_terminal_property_at = _le_terminal_property_atPtr
      .asFunction<
        LeProperty Function(ffi.Pointer<LeHandle>, LeTerminalId, int)
      >();
